# pypylon-cv-mimic

./: README.md  pyproject.toml
src/basler_cv/: __init__.py  camera.py
src/basler_cv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_import.py  test_use_cam.py
